# readmedaddy

./: .gitignore  .markdownlint-cli2.jsonc  .readmedaddy.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  install.sh  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  readme_request.md
.github/workflows/: ci.yml
docs/: presentation.html  tournament-scorecard.md
docs/superpowers/plans/: 2026-07-07-phase-1-2-detector-hardening-and-config-v2.md  2026-07-08-phase-3-4-action-events-and-wizard.md
docs/superpowers/specs/: 2026-07-07-guard-trigger-modes-and-init-wizard-design.md
docs/tournament-drafts/: banner-cli.md  diagram-led.md  fable-single-pass.md  minimal-elegant.md  reference-grade.md  show-dont-tell.md  story-hook.md
examples/: before-after-cli.md  before-after-library.md
hooks/: hooks.json
schema/: readmedaddy.schema.json
scripts/: install-hook.py  readmedaddy-init.py  validate-skill.py
skills/readmedaddy/: .readmedaddy.json.example  SKILL.md
skills/readmedaddy/assets/: ascii-banner.txt  badges.md
skills/readmedaddy/eval/: PREREGISTRATION.md  README.md  judge-prompt.md  score.py
skills/readmedaddy/eval/fixtures/lib-fixture/: baseline-README.md  expected.json  pyproject.toml
skills/readmedaddy/eval/fixtures/lib-fixture/src/slugcase/: __init__.py
skills/readmedaddy/eval/fixtures/lib-fixture/tests/: test_slugcase.py
skills/readmedaddy/hooks/: copilot-hooks.json  readme-drift.sh  (+1 more)
(+29 files in other folders)
