[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slugcase"
version = "1.2.0"
description = "Deterministic, Unicode-aware string-to-slug conversion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["slug", "slugify", "url", "text", "unicode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: General",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/slugcase"
Source = "https://example.com/slugcase/src"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/slugcase"]
